--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,22 @@ body {
     margin-bottom: 15px;
 }
 
+.bottom-offset-more {
+    margin-bottom: 25px;
+}
+
+.top-offset {
+    margin-top: 15px;
+}
+
+.padding-bottom-offset {
+    padding-bottom: 25px;
+}
+
+.padding-top-offset {
+    padding-top: 25px;
+}
+
 .ltr {
     direction: ltr;
 }
@@ -70,6 +86,10 @@ body {
     color: white;
 }
 
+.blue-bg {
+    background-color: #0078D7;
+}
+
 .link {
     text-decoration: none;
     color: #0078D7;
@@ -77,6 +97,14 @@ body {
 
 .link:hover {
     color: orangered;
+}
+
+.no-decoration {
+    text-decoration: none;
+}
+
+.black-text {
+    color: black;
 }
 
 /* ================== NAVBAR ================== */
@@ -312,14 +340,19 @@ body {
 
 /* ================== SPEC CARDS ================== */
 
+
+#specializations {
+    margin-bottom: 30px
+}
+
 .spec-card {
     background-color: white;
     border: 1px solid rgb(0,0,0,.25);
     border-radius: 10px;
     width: 120px;
     height: 150px;
-    margin-bottom: 10px;
     padding-bottom: 5px;
+    transition: 0.2s;
 }
 
 .spec-card:hover {
@@ -327,9 +360,7 @@ body {
 }
 
 .img-holder {
-    -webkit-box-align: center;
     align-items: center;
-    -webkit-box-pack: center;
     justify-content: center;
     display: flex;
     margin: 10px 10px 20px 10px;
@@ -352,6 +383,55 @@ body {
     flex-direction: row;
     justify-content: space-between;
 }
+
+/* ================== SERVICES ================== */
+
+.services-content {
+    display: flex;
+    margin: auto;
+    margin-top: 2%;
+    width: 55%;
+    justify-content: space-between;
+}
+
+.corona-bg {
+    background-image: url(images/corona-bg.png);
+    background-size: cover;
+}
+
+.service-img {
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.sides-margin-med {
+    margin: 0 40px 0 40px;
+}
+
+.services-btn {
+    background-color: #0078D7;
+    color: white;
+    width: 100%;
+    height: 50px;
+    border: 2px solid white;
+    border-radius: 10px;
+}
+
+.services-btn:hover {
+    background-color: white;
+}
+
+.services-btn a {
+    color: white;
+}
+
+.services-btn a:hover {
+    color: #0078D7;
+}
+
+
 
 
 /* ================== FOOTER ================== */
@@ -429,7 +509,6 @@ footer  p {
 /* ENAMAD */
 
 .e-namad {
-    display: flex;
     justify-content: center;
 }
 
@@ -486,7 +565,7 @@ input[type=text] {
     text-decoration: none!important;
 }
 
-.hover-box .btn {
+.hover-box .hover-btn {
     width: 100%;
     position: relative;
     display: inline-block;
@@ -501,7 +580,7 @@ input[type=text] {
     box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.06);
 }
 
-.hover-box .btn .btn-icon {
+.hover-box .hover-btn .hover-btn-icon {
     background-color: #FFBBBB;
     width: 15%;
     height: 45px;
@@ -513,42 +592,29 @@ input[type=text] {
     transition: all 0.6s;
 }
 
-.name-descripeion {
+.hover-btn-descr {
     position: relative;
     z-index: 9999;
 }
 
-.hover-box .btn:hover .btn-icon {
+.hover-box .hover-btn:hover .hover-btn-icon {
     width: 100%;
     border-radius: 10px;
 }
 
-.hover-box .btn:hover .btn-icon::after {
+.hover-box .hover-btn:hover .hover-btn-icon::after {
     display: none;
     opacity: 0.1;
 }
 
-.btn-icon i {
+.hover-btn-icon i {
     position: absolute;
     right: 20px;
     top: 15px;
     color: #fff;
 }
 
-.hover-box .btn:hover {
-    color: #fff!important;
-}
-
 /* COPYRIGHT */
-
-#copyright-left {
-    width:50%;
-    direction: ltr;
-}
-
-#copyright-right {
-    width: 50%;
-}
 
 #copyright {
     display: flex;
