--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     display: block;
 }
 
-.row {
+.row-flex {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
@@ -31,6 +31,14 @@ body {
 
 .rounded {
     border-radius: 10%;
+}
+
+.col-70 {
+    width: 70%;
+}
+
+.col-30 {
+    width: 30%;
 }
 
 .col-80 {
@@ -83,6 +91,22 @@ body {
 
 .top-offset-more {
     margin-top: 25px;
+}
+
+.top-offset-lot {
+    margin-top: 50px;
+}
+
+.left-offset-more {
+    margin-left: 25px;
+}
+
+.right-padding {
+    padding-right: 10px;
+}
+
+.left-padding {
+    padding-left : 10px;
 }
 
 .padding-bottom-offset {
@@ -150,6 +174,7 @@ body {
     margin-right: 40%;
 }
 
+
 .max-height {
     min-height: 100vh;
 }
@@ -190,4 +215,69 @@ body {
 
 .auto-align {
     margin: auto;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.vertical-center {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.fourside-padding-5 {
+    padding: 5px;
+}
+
+.fourside-margin-10 {
+    margin: 10px;
+}
+
+.btn-primary-orange {
+    color: #FB815E!important;
+    border: 2px solid #FB815E!important; 
+    background-color: white!important;
+}
+
+.btn-primary-orange:hover {
+    color: white!important;
+    background-color: #FB815E!important;
+}
+
+.circle {
+    border-radius: 50%;
+}
+
+.padding-btn-top-bottom {
+    padding-top: 8%!important;
+    padding-bottom: 8%!important;
+}
+
+#copyright p {
+    margin-bottom: 0!important;
+}
+
+.no-margin-bottom {
+    margin-bottom: 0!important;
+}
+
+.bottom-offset-less {
+    margin-bottom: 5px;
+}
+
+.blue-text {
+    color: #0078D7;
+}
+
+.icon-input {
+    background-color: rgba(0, 0, 0, .05);
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: 5px;
+    height: 3rem;
+}
+
+.icon-input input {
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
 }
