finished doctors list page added functionality to links fixed css conflicts

--- a/home.css
+++ b/home.css
@@ -521,6 +521,10 @@ nav {
     width: 30%;
 }
 
+.col-9 .hover-box .hover-btn .hover-btn-icon {
+    width: 25%;
+}
+
 
 /* ================== FOOTER ================== */
 
