--- a/doctors.css
+++ b/doctors.css
@@ -95,3 +95,108 @@
 .answer a:hover {
     color: red;
 }
+
+#doctor-card img {
+    width: 60%;
+}
+
+#doctor-card svg:hover {
+    fill:rgb(255, 81, 0)
+}
+
+#doctor-card svg {
+    color: white;
+}
+
+#doctor-card-info {
+    flex-direction: row!important;
+}
+
+
+.arrow-btn {
+    border: solid 1px orangered;
+    color: orangered;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+}
+
+.arrow-btn i {
+    padding-top: 8px;
+}
+
+.arrow-btn:hover {
+    background-color: orangered;
+    color: white;
+}
+
+
+
+#comment-bullets i {
+    color: rgba(100, 100, 100, .5);
+    cursor: pointer;
+}
+
+.bullet-selected {
+    color: #FA5A2C!important;
+}
+
+.tab:first-child {
+    border-radius: 0 8px 0 0;
+}
+
+.tabs {
+    border-radius: 8px 8px 0 0;
+    background-color: #EDEDED;
+}
+
+.selected-tab {
+    background-color: white!important;
+    color:  #0078D7!important;
+}
+
+.tab {
+    background-color: #EDEDED;
+    color:rgba(100, 100, 100, .8);
+}
+
+.deactive-date {
+    background-color: #EDEDED!important;
+    color: rgba(100, 100, 100, .8);
+}
+
+.dark-green {
+    color:darkgreen;
+}
+
+.fillbar-container {
+    position: relative;
+    top: 8px;
+    border-radius: 5px;
+    background-color: rgba(100, 100, 100, .2);
+    width: 100%;
+    height: 10px;
+}
+
+.fillbar {
+    border-radius: 5px;
+    background-color: #0078D7;
+    width: 100%;
+    height: 10px;
+}
+
+#days button {
+    background-color: white;
+    width: 80%;
+    border: none;
+    margin-right: 10px!important;
+}
+
+#days button:focus .card {
+    background-color: #0078D7;
+    color: white;
+}
+
+#days button:focus {
+    outline: none;
+}
