--- a/styles/doctors.css
+++ b/styles/doctors.css
@@ -1,3 +1,4 @@
+/* =========== Sticky Sidebar ========== */
 .asidec {
     z-index: 1!important;
     width: 100%!important;
@@ -7,6 +8,8 @@
     position: sticky!important;
     display: block;
 }
+
+/* ========== Doctors List =========== */
 
 .card-hover:hover {
     border: 1px solid rgb(255, 81, 0);
@@ -61,6 +64,8 @@
     border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
+/* =========== FAQ and Specialty description =========== */
+
 #more-info .content {
     background-color: #E5F2FE;
     border-radius: 15px;
@@ -100,6 +105,9 @@
     color: red;
 }
 
+/* =================== DOCTOR PERSONAL PAGE =================== */
+
+/* ========== Top of the page =========== */
 #doctor-card img {
     width: 60%;
 }
@@ -134,7 +142,28 @@
     color: white;
 }
 
+.deactive-date {
+    background-color: #EDEDED!important;
+    color: rgba(100, 100, 100, .8);
+}
 
+#days button {
+    background-color: white;
+    width: 80%;
+    border: none;
+    margin-right: 10px!important;
+}
+
+#days button:focus .card {
+    background-color: #0078D7;
+    color: white;
+}
+
+#days button:focus {
+    outline: none;
+}
+
+/* ========== Comments and address information ========== */
 
 #comment-bullets i {
     color: rgba(100, 100, 100, .5);
@@ -165,14 +194,7 @@
     color:rgba(100, 100, 100, .8);
 }
 
-.deactive-date {
-    background-color: #EDEDED!important;
-    color: rgba(100, 100, 100, .8);
-}
-
-.dark-green {
-    color:darkgreen;
-}
+/* ========== Users comments ========== */
 
 .fillbar-container {
     position: relative;
@@ -188,20 +210,4 @@
     background-color: #0078D7;
     width: 100%;
     height: 10px;
-}
-
-#days button {
-    background-color: white;
-    width: 80%;
-    border: none;
-    margin-right: 10px!important;
-}
-
-#days button:focus .card {
-    background-color: #0078D7;
-    color: white;
-}
-
-#days button:focus {
-    outline: none;
 }
